--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,31 +1,34 @@
-.header {
-    padding: 1rem 0 3rem;
-}
 
-.title {
-    color: black;
-    font-size: 3rem;
+
+.title {    // CODE TAHICHE
+    color: rgb(241, 238, 59);
+    margin: 1.5rem;
+    padding: 0.5rem;
+    font-size: 2rem;
     text-decoration: none;
+    text-align: center;
 }
 
 .nav-list {
     display: flex;
+    justify-content: center;
     list-style-type: none;
-    margin: auto;
+    padding: 4.3rem;
+    
 }
 
 .nav-item {
-    color: grey;
-    font-size: .9rem;
-    margin-right: 0.3rem;
+    color: rgb(175, 173, 173);
+    font-size: 1.5rem;
+    margin-right: 1.5rem;
     text-decoration: none;
 }
 
 
 .nav-item:hover {
-    color: yellow;
+    color:  rgb(241, 238, 59);
 }
 
 .active-nav-item {
-    color: yellow;
+    color: rgb(241, 238, 59);
 }
