--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,8 +1,11 @@
+html {
+    background-color: rgb(58, 39, 23);
+}
+
 .container {
     margin: 0 auto;
-    max-width: 750px;
+    max-width: 950px;
     padding: 1rem;
-
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -11,3 +14,5 @@
 .content {
     flex-grow: 1;
 }
+
+
