--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -20,38 +20,61 @@
         a:hover {                      // list posts               
             background: rgba(70, 67, 67, 0);   // list posts: suppr transparence
             
-                h2 {               // title post : hover title
+            .titre-post {               // title post : hover title
                     color: rgba(241, 16, 16, 0.856);
                 }
       
-                p {                // title post: hover date
+            .date-post {                // title post: hover date
                     color: rgba(241, 16, 16, 0.856);
                 }
-        }  
-
+        }   
+    
+        .titre-post {    
+            font-size: 1.8rem;       // title post
+            color: white;
+            margin-bottom: 0;
+        }
         
-
-    h2 {                       // title post
-        color: white;
-        margin-bottom: 0;
-    }
-
-    p {                         // date post
-        color: #777777;
-        font-size: .8rem;
-        font-style: italic;
-    }
-    
-    
+        
+        .date-post {                 // date post
+            color: #777777;
+            font-size: .8rem;
+            font-style: italic;
+        }
 }
 
+
+
+// MARKDOWN :
+
 h1 {
-    font-size: 2.5rem;
-    color: lightgrey;  // titles MD
+    font-size: 4rem;        // titles MD
+    color: lightgrey;  
+    padding: 8rem 0 0 0 ;
 }
 
 p {
-    font-size: 1.5rem;
-    color: white;     // p MD
-    
+    font-size: 1.4rem;        // p MD
+    color: white;     
+    padding: 1rem 2rem 1rem 4rem;
 }
+
+li, ol, ul {                  // li ol ul  MD
+    font-size: 2rem;
+    color: rgb(196, 193, 51); 
+    margin-left: 0.8rem;
+    
+            p {
+                font-size: 1.4rem;      // p MD
+                color: white;    
+                padding: 1rem 2rem 1rem 4rem;
+    }
+}
+
+code {
+    color: rgb(194, 131, 14);    // code  MD
+    background: black;
+    font-size: 1.7rem;
+}
+
+
