--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -4,5 +4,6 @@
 
 .mention-footer {
     color: rgb(169, 113, 221);
-    text-align: center,
+    text-align: center;
+    text-shadow: 1px 1px 20px  rgba(238, 238, 232, 0.945);
 }
