--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -4,10 +4,11 @@ html {
 
 .container {
     margin: 0 auto;
-    max-width: 950px;
+    max-width: 850px;
     padding: 1rem;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     min-height: 100vh;
 }
 
