--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -1,11 +1,16 @@
+
+
+
+
 .posts {
     list-style-type: none;
     margin: 0;
-
+    
     }
 
 .post {              // title post + date post
     margin: 1rem 0;
+    box-shadow: 10px 10px 5px grey;
 
     a {                      // bandeau noir
         background: rgba(39, 39, 36, 0.507);
@@ -14,12 +19,14 @@
         padding: 0.1rem 0.2rem;
         text-decoration: none;                
         align-content: center;
-       
+        box-shadow: none;
+        
         }     
 
         a:hover {                      // list posts               
             background: rgba(70, 67, 67, 0);   // list posts: suppr transparence
-            
+            text-shadow: 2px 2px 19px red;
+
             .titre-post {               // title post : hover title
                     color: rgba(241, 16, 16, 0.856);
                 }
@@ -33,6 +40,7 @@
             font-size: 1.8rem;       // title post
             color: white;
             margin-bottom: 0;
+            
         }
         
         
@@ -48,8 +56,8 @@
 // MARKDOWN :
 
 h1 {
-    font-size: 3.5rem;        // titles MD
-    color: lightgrey;  
+    font-size: 3.5rem;        // titles h1 MD
+    color: rgb(233, 224, 224);  
     padding: 8rem 0 0 0 ;
 }
 
@@ -57,12 +65,15 @@ p {
     font-size: 1.4rem;        // p MD
     color: white;     
     padding: 1rem 2rem 1rem 0;
+    line-height: 1.6;
+    
 }
 
 li, ol, ul {                  // li ol ul  MD
     font-size: 2rem;
     color: rgb(196, 193, 51); 
     margin-left: -0.3rem;
+    
     
             p {
                 font-size: 1.4rem;      // p MD
@@ -81,3 +92,4 @@ code {
 a {
     color: yellow;
 }
+
