suppr flou + suppr pages mdx

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,6 +1,6 @@
 
 
-.title {    // CODE TAHICHE
+.title {    // CODE TAHICHE ////
     color: rgb(241, 238, 59);
     margin: 1.5rem;
     padding: 0.5rem;
@@ -24,7 +24,7 @@
     font-size: 1.5rem;
     margin-right: 1.5rem;
     text-decoration: none;
-    text-shadow: 2px 2px 10px red;
+    
 }
 
 
